hphp/hack/test/typecheck/memoize/bad_class_by_reference.php.exp
File "bad_class_by_reference.php", line 7, characters 34-34:
Encountered unexpected token '&'. (Parsing[1002])
File "bad_class_by_reference.php", line 7, characters 35-38:
Parameters to memoized function must be null, bool, int, float, string, an object deriving IMemoizeParam, or a Container thereof. See also http://docs.hhvm.com/hack/attributes/special#__memoize (Typing[4149])
File "bad_class_by_reference.php", line 7, characters 30-32:
This is an object of type Bar
