hphp/hack/test/typecheck/memoize/bad_class_by_reference.php
<?hh

class Bar {}

class Foo {
  <<__Memoize>>
  public function someMethod(Bar &$arg): string {
    return "hello";
  }
}
